--- a/PLANTILLAS_WEB_ASIGNAR_IP.html
+++ b/PLANTILLAS_WEB_ASIGNAR_IP.html
@@ -32,6 +32,7 @@
     align-items: center; /* Centrar los elementos verticalmente */
     flex-wrap: wrap; /* Envolver elementos */
     margin-bottom: 30px;
+    border: 30px solid black;
 }
 
 .botones-container button {
