--- a/PLANTILLAS_WEB_FALLAS_MASIVAS.html
+++ b/PLANTILLAS_WEB_FALLAS_MASIVAS.html
@@ -31,6 +31,7 @@
     align-items: center; /* Centrar los elementos verticalmente */
     flex-wrap: wrap; /* Envolver elementos */
     margin-bottom: 30px;
+    border: 30px solid black;
 }
 
 .botones-container button {
