--- a/PLANTILLAS_WEB_CREAR_MASIVA.html
+++ b/PLANTILLAS_WEB_CREAR_MASIVA.html
@@ -137,6 +137,8 @@ textarea {
   </form>
 
   <form id="formulario">
+    <label for="Cuenta">Cuenta:</label>
+    <input type="text" id="Cuenta" name="Cuenta" required><br>
     <label for="TipodeServicio">Tipo de Servicio:</label>
     <select id="TipodeServicio" name="TipodeServicio" required>
       <option value="HFC">HFC</option>
@@ -216,6 +218,7 @@ function copiarTexto(id) {
 }
 
 function generarPlantilla() {
+  var Cuenta = document.getElementById("Cuenta").value;
   var fabricante = document.getElementById("fabricante").value;
   var numeroPQR = document.getElementById("numeroPQR").value;
   var marcacion = document.getElementById("marcacion").value;
@@ -238,7 +241,8 @@ function generarPlantilla() {
   var contador = "N " + negocios + " - E " + empresas + " - E&N " + total;
   
   var plantillaLog = contador + "\n\n" +
-                     "Tipo de Servicio: " + document.getElementById("TipodeServicio").value + "\t\t\t" + "\n" +
+                     "Cuenta: " + document.getElementById("Cuenta").value + "\t\t\t" + "\n" +
+		     "Tipo de Servicio: " + document.getElementById("TipodeServicio").value + "\t\t\t" + "\n" +
                      "Nombre: " + nombre + "\t\t\t" + "\n" +
                      "Celular: " + celular + "\t\t\t" + "\n" +
                      "Afectacion: " + afectacion + "\t\t\t" + "\n" +
