--- a/PLANTILLAS_WEB_ASIGNAR_IP.html
+++ b/PLANTILLAS_WEB_ASIGNAR_IP.html
@@ -46,7 +46,7 @@
     font-size: 16px; /* Tamaño de letra */
 }
 
-button.copiar {
+button.copiarTexto {
     background-color: #000000;
     color: white;
     padding: 10px 20px;
