--- a/PLANTILLAS_WEB_ASIGNAR_IP.html
+++ b/PLANTILLAS_WEB_ASIGNAR_IP.html
@@ -166,7 +166,7 @@ textarea {
             <div>
                 <h2>TITULO NOTAS F7</h2>
                 <textarea id="tituloNotasF7" readonly></textarea>
-                <button onclick="copiarTexto('tituloNotasF7')">Copiar</button>
+                <button class="copiar" onclick="copiarTexto('tituloNotasF7')">Copiar</button>
             </div>
 
             <div>
