--- a/PLANTILLAS_WEB_ASIGNAR_IP.html
+++ b/PLANTILLAS_WEB_ASIGNAR_IP.html
@@ -172,7 +172,7 @@ textarea {
             <div>
                 <h2>PLANTILLA LOG</h2>
                 <textarea id="plantillaLog" readonly></textarea>
-                <button onclick="copiarTexto('plantillaLog')">Copiar</button>
+                <button class="copiar" onclick="copiarTexto('plantillaLog')">Copiar</button>
             </div>
         </div>
     </div>
