--- a/PLANTILLAS_WEB_CONFIGURACIONES_ESPECIALES.html
+++ b/PLANTILLAS_WEB_CONFIGURACIONES_ESPECIALES.html
@@ -158,13 +158,13 @@ textarea {
             <div>
                 <h2>TITULO NOTAS F7</h2>
                 <textarea id="tituloNotasF7" readonly></textarea>
-                <button onclick="copiarTexto('tituloNotasF7')">Copiar</button>
+                <button class="copiar" onclick="copiarTexto('tituloNotasF7')">Copiar</button>
             </div>
 
             <div>
                 <h2>PLANTILLA LOG</h2>
                 <textarea id="plantillaLog" readonly></textarea>
-                <button onclick="copiarTexto('plantillaLog')">Copiar</button>
+                <button class="copiar" onclick="copiarTexto('plantillaLog')">Copiar</button>
             </div>
         </div>
     </div>
