--- a/PLANTILLAS_WEB_CREAR_MASIVA.html
+++ b/PLANTILLAS_WEB_CREAR_MASIVA.html
@@ -180,13 +180,13 @@ textarea {
     <div>
       <h2>TITULO INCIDENTE MAXIMO</h2>
       <textarea id="tituloNotasF7" readonly></textarea>
-      <button onclick="copiarTexto('tituloNotasF7')">Copiar</button>
+      <button class="copiar" onclick="copiarTexto('tituloNotasF7')">Copiar</button>
     </div>
 
     <div>
       <h2>PLANTILLA MAXIMO</h2>
       <textarea id="plantillaLog" readonly></textarea>
-      <button onclick="copiarTexto('plantillaLog')">Copiar</button>
+      <button class="copiar" onclick="copiarTexto('plantillaLog')">Copiar</button>
     </div>
   </div>
 </div>
