--- a/PLANTILLAS_WEB_CREAR_MASIVA.html
+++ b/PLANTILLAS_WEB_CREAR_MASIVA.html
@@ -31,7 +31,6 @@
     align-items: center; /* Centrar los elementos verticalmente */
     flex-wrap: wrap; /* Envolver elementos */
     margin-bottom: 30px;
-    border: 30px solid black;
 }
 
 .botones-container button {
@@ -45,7 +44,7 @@
     font-size: 16px; /* Tamaño de letra */
 }
 
-button.copiarTexto {
+button.copiar {
     background-color: #000000;
     color: white;
     padding: 10px 20px;
@@ -83,7 +82,7 @@ input[type="text"], input[type="number"], select {
 input[type="submit"], input[type="button"] {
     background-color: #000000;
     color: white;
-    padding: 10px 20px;
+    padding: 10px 15px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
@@ -137,8 +136,6 @@ textarea {
   </form>
 
   <form id="formulario">
-    <label for="Cuenta">Cuenta:</label>
-    <input type="text" id="Cuenta" name="Cuenta" required><br>
     <label for="TipodeServicio">Tipo de Servicio:</label>
     <select id="TipodeServicio" name="TipodeServicio" required>
       <option value="HFC">HFC</option>
@@ -183,13 +180,13 @@ textarea {
     <div>
       <h2>TITULO INCIDENTE MAXIMO</h2>
       <textarea id="tituloNotasF7" readonly></textarea>
-      <button onclick="copiarTexto('tituloNotasF7')">Copiar</button>
+      <button class="copiar" onclick="copiarTexto('tituloNotasF7')">Copiar</button>
     </div>
 
     <div>
       <h2>PLANTILLA MAXIMO</h2>
       <textarea id="plantillaLog" readonly></textarea>
-      <button onclick="copiarTexto('plantillaLog')">Copiar</button>
+      <button class="copiar" onclick="copiarTexto('plantillaLog')">Copiar</button>
     </div>
   </div>
 </div>
@@ -218,7 +215,6 @@ function copiarTexto(id) {
 }
 
 function generarPlantilla() {
-  var Cuenta = document.getElementById("Cuenta").value;
   var fabricante = document.getElementById("fabricante").value;
   var numeroPQR = document.getElementById("numeroPQR").value;
   var marcacion = document.getElementById("marcacion").value;
@@ -241,8 +237,7 @@ function generarPlantilla() {
   var contador = "N " + negocios + " - E " + empresas + " - E&N " + total;
   
   var plantillaLog = contador + "\n\n" +
-                     "Cuenta: " + document.getElementById("Cuenta").value + "\t\t\t" + "\n" +
-		     "Tipo de Servicio: " + document.getElementById("TipodeServicio").value + "\t\t\t" + "\n" +
+                     "Tipo de Servicio: " + document.getElementById("TipodeServicio").value + "\t\t\t" + "\n" +
                      "Nombre: " + nombre + "\t\t\t" + "\n" +
                      "Celular: " + celular + "\t\t\t" + "\n" +
                      "Afectacion: " + afectacion + "\t\t\t" + "\n" +
