--- a/PLANTILLAS_WEB_FALLAS_MASIVAS.html
+++ b/PLANTILLAS_WEB_FALLAS_MASIVAS.html
@@ -82,7 +82,7 @@ input[type="text"], input[type="number"], select {
 input[type="submit"], input[type="button"] {
     background-color: #000000;
     color: white;
-    padding: 10px 20px;
+    padding: 10px 15px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
@@ -133,6 +133,8 @@ textarea {
   </form>
 
   <form id="formulario">
+    <label for="Cuenta">Cuenta</label>
+    <input type="text" id="Cuenta" name="Cuenta" required><br>
     <label for="reporteFalla">Reporte de falla:</label>
     <input type="text" id="reporteFalla" name="reporteFalla" required><br>
     <label for="direccionVisita">Dirección de donde se debe atender la visita:</label>
