--- a/PLANTILLAS_WEB_CREAR_VISITAS.html
+++ b/PLANTILLAS_WEB_CREAR_VISITAS.html
@@ -136,55 +136,57 @@ textarea {
     <input type="text" id="franjaVisita" name="franjaVisita" required><br>
   </form>
 
-  <form id="formulario">
-    <label for="reporteFalla">Reporte de falla:</label>
+    <form id="formulario">
+    <label for="Cuenta">Cuenta</label>
+    <input type="text" id="Cuenta" name="Cuenta" required><br>
+    <label for="reporteFalla">Reporte de falla</label>
     <input type="text" id="reporteFalla" name="reporteFalla" required><br>
-    <label for="direccionVisita">Dirección de donde se debe atender la visita:</label>
+    <label for="direccionVisita">Dirección de donde se debe atender la visita</label>
     <input type="text" id="direccionVisita" name="direccionVisita" required><br>
-    <label for="barrio">Barrio:</label>
+    <label for="barrio">Barrio</label>
     <input type="text" id="barrio" name="barrio" required><br>
-    <label for="horarioAtencion">Horario de atención de la empresa:</label>
+    <label for="horarioAtencion">Horario de atención de la empresa</label>
     <input type="text" id="horarioAtencion" name="horarioAtencion" required><br>
-    <label for="nombreLlamada">Nombre de quien llama:</label>
+    <label for="nombreLlamada">Nombre de quien llama</label>
     <input type="text" id="nombreLlamada" name="nombreLlamada" required><br>
-    <label for="celular">Celular:</label>
+    <label for="celular">Celular</label>
     <input type="text" id="celular" name="celular" required><br>
-    <label for="telefonoFijo">Teléfono fijo:</label>
+    <label for="telefonoFijo">Teléfono fijo</label>
     <input type="text" id="telefonoFijo" name="telefonoFijo" required><br>
-    <label for="correo">Correo:</label>
+    <label for="correo">Correo</label>
     <input type="text" id="correo" name="correo" required><br>
-    <label for="autorizacionCorreo">Cliente autoriza comunicación vía correo:</label>
+    <label for="autorizacionCorreo">Cliente autoriza comunicación vía correo</label>
     <select id="autorizacionCorreo" name="autorizacionCorreo" required>
       <option value="SI">SI</option>
       <option value="NO">NO</option>
     </select><br>
-    <label for="llsOT">Ll's/OT:</label>
+    <label for="llsOT">Ll's/OT</label>
     <input type="text" id="llsOT" name="llsOT" required><br>
-    <label for="reincidente">Es reincidente:</label>
+    <label for="reincidente">Es reincidente</label>
     <select id="reincidente" name="reincidente" required>
       <option value="SI">SI</option>
       <option value="NO">NO</option>
     </select><br>
-    <label for="reporteServicio">Reporte solo por un servicio:</label>
+    <label for="reporteServicio">Reporte solo por un servicio</label>
     <select id="reporteServicio" name="reporteServicio" required>
       <option value="SI">SI</option>
       <option value="NO">NO</option>
     </select><br>
-    <label for="cmDecodificadorMta">CM / Decodificador / MTA enganchado:</label>
+    <label for="cmDecodificadorMta">CM / Decodificador / MTA enganchado</label>
     <select id="cmDecodificadorMta" name="cmDecodificadorMta" required>
       <option value="ENGANCHADO">ENGANCHADO</option>
       <option value="DESENGANCHADO">DESENGANCHADO</option>
     </select><br>
-    <label for="provisionCorrecta">Provisión correcta (RR- Modulo-Visor-Cm-Intraway):</label>
+    <label for="provisionCorrecta">Provisión correcta (RR- Modulo-Visor-Cm-Intraway)</label>
     <select id="provisionCorrecta" name="provisionCorrecta" required>
       <option value="OK">OK</option>
       <option value="KO">KO</option>
     </select><br>
-    <label for="parametrosCm">Parámetros de CM (Niveles):</label>
+    <label for="parametrosCm">Parámetros de CM (Niveles)</label>
     <input type="text" id="parametrosCm" name="parametrosCm" required><br>
-    <label for="vecinos">Vecinos:</label>
+    <label for="vecinos">Vecinos</label>
     <input type="text" id="vecinos" name="vecinos" required><br>
-    <label for="observaciones">Observaciones:</label>
+    <label for="observaciones">Observaciones</label>
     <input type="text" id="observaciones" name="observaciones" required><br>
     <input type="button" value="Copiar notas F7" onclick="copiarTexto('formulario')">
     <input type="button" value="Limpiar" onclick="limpiarCampos()">
