--- a/PLANTILLAS_WEB_FALLAS_MASIVAS.html
+++ b/PLANTILLAS_WEB_FALLAS_MASIVAS.html
@@ -133,6 +133,8 @@ textarea {
   </form>
 
   <form id="formulario">
+    <label for="Cuenta">Cuenta</label>
+    <input type="text" id="Cuenta" name="Cuenta" required><br>
     <label for="reporteFalla">Reporte de falla:</label>
     <input type="text" id="reporteFalla" name="reporteFalla" required><br>
     <label for="direccionVisita">Dirección de donde se debe atender la visita:</label>
