--- a/PLANTILLAS_WEB_ASIGNAR_IP.html
+++ b/PLANTILLAS_WEB_ASIGNAR_IP.html
@@ -230,7 +230,7 @@ textarea {
             var cargo = document.getElementById("Cargo").value;
             var observaciones = document.getElementById("observaciones").value;
 
-            var plantillaLog = "" + nombre + "/" + telefono + "/" + cedula + "/" + cargo + "/" + observaciones;
+            var plantillaLog = "" + nombre + " / " + telefono + " / " + cedula + " / " + cargo + " / " + observaciones + " / VER NOTAS F7...(" + document.getElementById("fabricante").value + ")";
             document.getElementById("plantillaLog").value = plantillaLog;
 
             var tituloNotasF7 = "*/*/IP FIJA/*/*/";
