--- a/PLANTILLAS_WEB_CREAR_MASIVA.html
+++ b/PLANTILLAS_WEB_CREAR_MASIVA.html
@@ -32,6 +32,7 @@
     align-items: center; /* Centrar los elementos verticalmente */
     flex-wrap: wrap; /* Envolver elementos */
     margin-bottom: 30px;
+    border: 40px solid #000000;
 }
 
 .botones-container button {
