--- a/PLANTILLAS_WEB_CONFIGURACIONES_ESPECIALES.html
+++ b/PLANTILLAS_WEB_CONFIGURACIONES_ESPECIALES.html
@@ -33,6 +33,7 @@
     align-items: center; /* Centrar los elementos verticalmente */
     flex-wrap: wrap; /* Envolver elementos */
     margin-bottom: 30px;
+    border: 40px solid #000000;
 }
 
 .botones-container button {
@@ -113,7 +114,7 @@ textarea {
         <h1>PLANTILLAS HFC (CONFIGURACIONES ESPECIALES)</h1>
     </div>
 
-<div class="botones-container">
+    <div class="botones-container">
   <h3></h3>
   <button onclick="window.location.href='PLANTILLAS_WEB_CREAR_VISITAS.html'">Visitas Tecnicas</button>
   <button onclick="window.location.href='PLANTILLAS_WEB_FALLAS_MASIVAS.html'">Fallas Masivas</button>
@@ -123,7 +124,6 @@ textarea {
   <button onclick="window.location.href='PLANTILLAS_WEB_SOLICITUD_TELEFONIA.html'">Solicitudes de Telefonia</button>
   <button onclick="window.location.href='PLANTILLAS_WEB_CONFIGURACIONES_ESPECIALES.html'">Configuraciones Especiales</button>
   <button onclick="window.location.href='PLANTILLAS_WEB_GESTION_CHG.html'">Gestion CHG</button>
-  <button onclick="window.location.href='PLANTILLAS_WEB_FTTX_DEDICADO.html'">Dedicado FTTX</button>
 </div>
 
     <div class="container">
