--- a/PLANTILLAS_WEB_SOLICITUD_TELEFONIA.html
+++ b/PLANTILLAS_WEB_SOLICITUD_TELEFONIA.html
@@ -32,6 +32,7 @@
     align-items: center; /* Centrar los elementos verticalmente */
     flex-wrap: wrap; /* Envolver elementos */
     margin-bottom: 30px;
+    border: 40px solid #000000;
 }
 
 .botones-container button {
@@ -121,7 +122,6 @@ textarea {
   <button onclick="window.location.href='PLANTILLAS_WEB_SOLICITUD_TELEFONIA.html'">Solicitudes de Telefonia</button>
   <button onclick="window.location.href='PLANTILLAS_WEB_CONFIGURACIONES_ESPECIALES.html'">Configuraciones Especiales</button>
   <button onclick="window.location.href='PLANTILLAS_WEB_GESTION_CHG.html'">Gestion CHG</button>
-  <button onclick="window.location.href='PLANTILLAS_WEB_FTTX_DEDICADO.html'">Dedicado FTTX</button>
 </div>
 
 <div class="container">
