--- a/PLANTILLAS_WEB_FTTX_DEDICADO.html
+++ b/PLANTILLAS_WEB_FTTX_DEDICADO.html
@@ -202,7 +202,72 @@
     .horizontal-textareas textarea {
     width: 130%;
     box-sizing: border-box; /* Asegura que el padding y el borde se incluyan en el ancho total */
-    height: 100px; /* Ajusta la altura según sea necesario */ 
+    height: 100px; /* Ajusta la altura según sea necesario */
+
+    .popup-overlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.5);
+            display: none; /* Oculto por defecto */
+            justify-content: center;
+            align-items: center;
+        }
+
+        .popup-content {
+            background-color: white;
+            padding: 20px;
+            border-radius: 5px;
+            width: 80%;
+            max-width: 600px;
+        }
+
+        .popup-content h2 {
+            margin-top: 0;
+        }
+
+        .tabs {
+            display: flex;
+            justify-content: space-between;
+            margin-bottom: 20px;
+        }
+
+        .tab {
+            flex: 1;
+            text-align: center;
+            padding: 10px;
+            cursor: pointer;
+            background-color: #f1f1f1;
+            border: 1px solid #ccc;
+        }
+
+        .tab.active {
+            background-color: #ddd;
+            font-weight: bold;
+        }
+
+        .tab-content {
+            display: none;
+        }
+
+        .tab-content.active {
+            display: block;
+        }
+
+        .close-btn {
+            background-color: #000;
+            color: white;
+            border: none;
+            padding: 10px;
+            cursor: pointer;
+            margin-top: 20px;
+        }
+
+        .close-btn:hover {
+            background-color: #333;
+        } 
 </style>
 
 </head>
@@ -400,27 +465,45 @@ Es una falla Reincidente: ${fallaReincidente}
         const ping = document.getElementById('ping').value.trim();
         const capa2 = document.getElementById('capa2').value.trim();
         const capa3 = document.getElementById('capa3').value.trim();
-        document.getElementById('text3').value = `//////////////////////////PDSR//////////////////////////// 
+        document.getElementById('text3').value = `=================================================================================================================
+==================================================================================================================
+////////////////////////////////////////////////////PDSR//////////////////////////////////////////////////////////
+==================================================================================================================
 
 ${PDSR}
 
-//////////////////////RED DE ACCESO/////////////////////// 
+==================================================================================================================
+==================================================================================================================
+///////////////////////////////////////////////RED DE ACCESO//////////////////////////////////////////////////////
+==================================================================================================================
 
 ${redAccesoDet}
 
-///////////////////////////RUTA/////////////////////////// 
+==================================================================================================================
+==================================================================================================================
+////////////////////////////////////////////////////RUTA//////////////////////////////////////////////////////////
+==================================================================================================================
 
 ${ruta}
 
-///////////////////////////PING/////////////////////////// 
+==================================================================================================================
+==================================================================================================================
+/////////////////////////////////////////////////////PING/////////////////////////////////////////////////////////
+==================================================================================================================
 
 ${ping}
 
-///////////////////////////CAPA 2///////////////////////// 
+==================================================================================================================
+==================================================================================================================
+////////////////////////////////////////////////////CAPA 2////////////////////////////////////////////////////////
+==================================================================================================================
 
 ${capa2}
 
-///////////////////////ACCESO A ROUTER////////////////////
+==================================================================================================================
+==================================================================================================================
+////////////////////////////////////////////////////CAPA 3////////////////////////////////////////////////////////
+==================================================================================================================
 
 ${capa3}`;
     }
